--- a/search.ipynb
+++ b/search.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import sqlite3\n",
     "\n",
-    "searchterm = \"bed\"\n",
+    "searchterm = \"donuts\"\n",
     "conn = sqlite3.connect(\"transcripts.db\")\n",
     "c = conn.cursor()\n",
     "\n",
@@ -29,12 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines = [\n",
-    "    line\n",
-    "    for id, filename, show, episode, title, date, idx, start, end, duration, speaker, speakerName, line, in results\n",
-    "]\n",
-    "\n",
-    "lines"
+    "results"
    ]
   }
  ],
@@ -45,7 +40,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
